# icecream

./: CHANGELOG.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  pyproject.toml
src/cryoei/: cli.py  defaults.yaml  predict.py  train.py
src/cryoei/dataset/: ddw.py  multi_volumes.py  subvolumes.py  volumes.py
src/cryoei/models/: __init__.py  buildingblocks.py  buildingblocks_bf.py  iso_unet.py
src/cryoei/trainer/: base_trainer.py  eq_trainer.py
src/cryoei/utils/: inference_util.py  utils.py
src/icecream/: cli.py  defaults.yaml  predict.py  train.py  train_ddp.py
src/icecream/dataset/: multi_volumes.py  subvolumes.py  volumes.py
src/icecream/models/: __init__.py  unet.py  unet3d.py  utils_bf.py
src/icecream/trainer/: __init__.py  base_trainer.py  base_trainer_ddp.py  eq_trainer.py  eq_trainer_ddp.py
src/icecream/utils/: data_util.py  ddp_util.py  inference_util.py  mask_util.py  sim_util.py  utils.py
tests/integration/: test_train_ddp_default.py  test_train_ddp_multi_volume.py  test_train_single_default.py  test_train_single_multi_volume.py
