[project]
name = "icecream"
version = "0.3.0"
requires-python = ">=3.11"
description = "Cryo-ET training & prediction CLI"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
  "torch>=2.3",         
  "numpy>=2.0",
  "scipy>=1.11",
  "scikit-image>=0.22",  # for skimage.filters.window + transforms
  "mrcfile>=1.5",
  "PyYAML>=6",
  "tqdm>=4.66",
  "typer>=0.12",  
  "h5py>=3.10",
  "matplotlib>=3.8"
]

[project.scripts]
icecream = "icecream.cli:app"
